src/styles/components/sequence.scss
@import "../settings";
@import "../colours";

.sequence {
  font-family: $font-family-monospace;
  display: flex;
  flex-wrap: wrap;
  &__chunk {
    margin: ($global-margin/2);
    text-align: right;
  }
}

